--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,13 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1>{{ _('Hi, %(username)s!', username=current_user.username) }}</h1>
+    <h1>{% if current_user.is_authenticated %}
+        {{ _('Hi, %(username)s!', username=current_user.username) }}
+        {% else %}
+        {{ _('Hi, Stranger!') }}
+        {% endif %}
+    </h1>
+    <br>
     {% if form %}
     {{ wtf.quick_form(form) }}
     <br>
