Notification/小纸条功能

--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -5,7 +5,7 @@
         <tr>
             <td width="128px"><img src="{{ user.avatar(128) }}"></td>
             <td>
-                <h1>{{ _('User:') }} {{ user.username }}</h1>
+                <h3>{{ _('User:') }} {{ user.username }}</h3>
                 {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}                 
                 {% if user.last_seen %}
                 <p>{{ _('Last seen on:') }} {{ moment(user.last_seen).format('LLL') }}</p>
@@ -13,11 +13,17 @@
                 <!-- <p>{{ user.followers.count() }} followers, {{ user.followed.count() }} following.</p> -->
                 <p>{{ _('%(count)d followers', count=user.followers.count()) }}, {{ _('%(count)d following', count=user.followed.count()) }}</p>
                 {% if user == current_user %}
-                <p><a href="{{ url_for('main.edit_profile') }}">{{ _('Edit your profile') }}</a></p>
+                <a href="{{ url_for('main.edit_profile') }}">{{ _('Edit your profile') }}</a>
                 {% elif not current_user.is_following(user) %}
-                <p><a href="{{ url_for('main.follow', username=user.username) }}">{{ _('Follow') }}</a></p>
+                <a href="{{ url_for('main.follow', username=user.username) }}">{{ _('Follow') }}</a>
                 {% else %}
-                <p><a href="{{ url_for('main.unfollow', username=user.username) }}">{{ _('Unfollow') }}</a></p>
+                <a href="{{ url_for('main.unfollow', username=user.username) }}">{{ _('Unfollow') }}</a>
+                {% endif %}
+                {% if user != current_user %}
+                    <a href="{{ url_for('main.send_message',
+                                        recipient=user.username) }}">
+                        {{ _('Send private message') }}
+                    </a>
                 {% endif %}
             </td>
         </tr>
