--- a/app/templates/user_popup.html
+++ b/app/templates/user_popup.html
@@ -25,6 +25,10 @@
                         {{ _('Unfollow') }}
                     </a>
                     {% endif %}
+                    <a href="{{ url_for('main.send_message',
+                                        recipient=user.username) }}">
+                        {{ _('Send private message') }}
+                    </a>
                 {% endif %}
             </small>
         </td>
