--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -14,6 +14,9 @@
                 <p>{{ _('%(count)d followers', count=user.followers.count()) }}, {{ _('%(count)d following', count=user.followed.count()) }}</p>
                 {% if user == current_user %}
                 <a href="{{ url_for('main.edit_profile') }}">{{ _('Edit your profile') }}</a>
+                    {% if not current_user.get_task_in_progress('export_posts') %}
+                    <a href="{{ url_for('main.export_posts') }}">{{ _('Export your posts') }}</a>
+                    {% endif %}
                 {% elif not current_user.is_following(user) %}
                 <a href="{{ url_for('main.follow', username=user.username) }}">{{ _('Follow') }}</a>
                 {% else %}
