--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -5,27 +5,45 @@
         <tr>
             <td width="128px"><img src="{{ user.avatar(128) }}"></td>
             <td>
-                <h3>{{ _('User:') }} {{ user.username }}</h3>
-                {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}                 
-                {% if user.last_seen %}
-                <p>{{ _('Last seen on:') }} {{ moment(user.last_seen).format('LLL') }}</p>
-                {% endif %}
-                <!-- <p>{{ user.followers.count() }} followers, {{ user.followed.count() }} following.</p> -->
-                <p>{{ _('%(count)d followers', count=user.followers.count()) }}, {{ _('%(count)d following', count=user.followed.count()) }}</p>
+                <h3>
+                    {{ user.username }}
+                    {% if user.last_seen %}
+                    <sub><small>{{ _('Last seen on:') }} {{ moment(user.last_seen).format('M月D日 HH:mm:ss') }}</small></sub>
+                    {% endif %}
+                </h3>
+                {% if user.about_me %}
+                <p>{{ user.about_me }}
+                    {% if user == current_user %}
+                        <a href="{{ url_for('main.edit_profile') }}">
+                            <span class="glyphicon glyphicon-edit"></span>
+                        </a>
+                    {% endif %}
+                </p>{% endif %}
+                <p>{{ _('%(count)d followers', count=user.followers.count()) }} {{ _('%(count)d following', count=user.followed.count()) }}</p>
                 {% if user == current_user %}
-                <a href="{{ url_for('main.edit_profile') }}">{{ _('Edit your profile') }}</a>
                     {% if not current_user.get_task_in_progress('export_posts') %}
-                    <a href="{{ url_for('main.export_posts') }}">{{ _('Export your posts') }}</a>
+                    <a href="{{ url_for('main.export_posts') }}">
+                        <span class="glyphicon glyphicon-export"></span>
+                        <small>{{ _('Export your posts') }}</small>
+                    </a>
                     {% endif %}
                 {% elif not current_user.is_following(user) %}
-                <a href="{{ url_for('main.follow', username=user.username) }}">{{ _('Follow') }}</a>
+                <a href="{{ url_for('main.follow', username=user.username) }}">
+                    <span class="glyphicon glyphicon-eye-close"></span>
+                    <small>{{ _('Follow') }}</small>
+                </a>
                 {% else %}
-                <a href="{{ url_for('main.unfollow', username=user.username) }}">{{ _('Unfollow') }}</a>
+                <a href="{{ url_for('main.unfollow', username=user.username) }}">
+                    <span class="glyphicon glyphicon-eye-open"></span>
+                    <small>{{ _('Unfollow') }}</small>
+                </a>
                 {% endif %}
                 {% if user != current_user %}
                     <a href="{{ url_for('main.send_message',
                                         recipient=user.username) }}">
-                        {{ _('Send private message') }}
+                        {# {{ _('Send private message') }} #}
+                        <span class="glyphicon glyphicon-send"></span>
+                        <small>{{ _('Send private message') }}</small>
                     </a>
                 {% endif %}
             </td>
