--- a/app/templates/user_popup.html
+++ b/app/templates/user_popup.html
@@ -3,34 +3,45 @@
         <td width="64" style="border: 0px;"><img src="{{ user.avatar(64) }}"></td>
         <td style="border: 0px;">
             <p>
-                <a href="{{ url_for('main.user', username=user.username) }}">
-                    {{ user.username }}
-                </a>
+                <strong>{{ user.username }}</strong>
             </p>
             <small>
-                {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
-                {% if user.last_seen %}
-                <p>{{ _('Last seen on') }}: 
-                    {{ moment(user.last_seen).format('lll') }}</p>
-                {% endif %}
-                <p>{{ _('%(count)d followers', count=user.followers.count()) }},
-                    {{ _('%(count)d following', count=user.followed.count()) }}</p>
-                {% if user != current_user %}
-                    {% if not current_user.is_following(user) %}
+                    {% if user.about_me %}
+                    <p>{{ user.about_me }}
+                        {% if user == current_user %}
+                            <a href="{{ url_for('main.edit_profile') }}">
+                                <span class="glyphicon glyphicon-edit"></span>
+                            </a>
+                        {% endif %}
+                    </p>{% endif %}
+                    <p>{{ _('%(count)d followers', count=user.followers.count()) }} {{ _('%(count)d following', count=user.followed.count()) }}</p>
+                    {% if user == current_user %}
+                        {% if not current_user.get_task_in_progress('export_posts') %}
+                        <a href="{{ url_for('main.export_posts') }}">
+                            <span class="glyphicon glyphicon-export"></span>
+                            <small>{{ _('Export your posts') }}</small>
+                        </a>
+                        {% endif %}
+                    {% elif not current_user.is_following(user) %}
                     <a href="{{ url_for('main.follow', username=user.username) }}">
-                        {{ _('Follow') }}
+                        <span class="glyphicon glyphicon-eye-close"></span>
+                        <small>{{ _('Follow') }}</small>
                     </a>
                     {% else %}
                     <a href="{{ url_for('main.unfollow', username=user.username) }}">
-                        {{ _('Unfollow') }}
+                        <span class="glyphicon glyphicon-eye-open"></span>
+                        <small>{{ _('Unfollow') }}</small>
                     </a>
                     {% endif %}
-                    <a href="{{ url_for('main.send_message',
-                                        recipient=user.username) }}">
-                        {{ _('Send private message') }}
-                    </a>
-                {% endif %}
-            </small>
+                    {% if user != current_user %}
+                        <a href="{{ url_for('main.send_message',
+                                            recipient=user.username) }}">
+                            {# {{ _('Send private message') }} #}
+                            <span class="glyphicon glyphicon-send"></span>
+                            <small>{{ _('Send private message') }}</small>
+                        </a>
+                    {% endif %}
+                </small>
         </td>
     </tr>
 </table>
